--- a/performance/pom.xml
+++ b/performance/pom.xml
@@ -114,6 +114,7 @@
             <groupId>org.mule.services</groupId>
             <artifactId>mule-service-weave</artifactId>
             <classifier>mule-service</classifier>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.mule.runtime</groupId>
@@ -246,7 +247,7 @@
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
-            </plugins>
+                </plugins>
             </build>
         </profile>
         <profile>
