--- a/pom.xml
+++ b/pom.xml
@@ -68,25 +68,31 @@
     </pluginManagement>
   </build>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>com.mulesoft.mule.runtime.bom</groupId>
-        <artifactId>mule-test-dependencies-bom</artifactId>
-        <version>${muleDependenciesVersion}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.mulesoft.mule.runtime.bom</groupId>
+                <artifactId>mule-test-dependencies-bom</artifactId>
+                <version>${muleDependenciesVersion}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mule.services</groupId>
+                <artifactId>mule-service-weave</artifactId>
+                <classifier>mule-service</classifier>
+                <version>${weaveVersion}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>*</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
   <dependencies>
-    <dependency>
-      <groupId>org.mule.services</groupId>
-      <artifactId>mule-service-weave</artifactId>
-      <classifier>mule-service</classifier>
-      <scope>provided</scope>
-    </dependency>
      <dependency>
         <groupId>org.mule.runtime</groupId>
         <artifactId>mule-dwb-api</artifactId> 
