W-13065369: User Story B - Integration of Optel metrics exporter and mule runtime tracer for AllStatistics metrics.

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>logging</module>
     <module>tooling-support-tests</module>
     <module>tracing</module>
+    <module>metrics</module>
   </modules>
 
   <properties>
