--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -16,9 +16,6 @@
         <javaModuleName>org.mule.test.integration</javaModuleName>
         <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
-
-        <groovy.version>2.4.21</groovy.version>
-        <muleScriptingModuleVersion>2.0.1</muleScriptingModuleVersion>
     </properties>
 
     <build>
@@ -137,7 +134,6 @@
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-scripting-module</artifactId>
             <classifier>mule-plugin</classifier>
-            <version>${muleScriptingModuleVersion}</version>
         </dependency>
         
         <!-- Plugins for testing sources -->
@@ -187,6 +183,7 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
+            <version>${derbyVersion}</version>
             <scope>test</scope>
         </dependency>
 
@@ -347,12 +344,17 @@
             <classifier>mule-plugin</classifier>
             <scope>test</scope>
         </dependency>
-        <!--Groovy-->
+        <!-- Even if these are already declared in mule-tests-infrastructure, need to redeclare them here because the test-runner requires it --> 
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>${groovy.version}</version>
-            <classifier>indy</classifier>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>${groovyVersionBuild}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy-jsr223</artifactId>
+            <version>${groovyVersionBuild}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
