--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -212,6 +212,12 @@
             <classifier>mule-plugin</classifier>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>test-components</artifactId>
+            <classifier>mule-plugin</classifier>
+            <scope>test</scope>
+        </dependency>
 
         <!-- DB Drivers -->
         <dependency>
