--- a/build.yaml
+++ b/build.yaml
@@ -9,9 +9,11 @@ additionalConfigFileMetadataProviderList:
 projectType: runtime
 # TODO W-13029381 Change to 17
 jdkTool: OPEN-JDK11
+mavenAdditionalArgs: -P!testJdkWithoutXmlModule
 additionalTestConfigs:
   jdk8:
     testJdkTool: OPEN-JDK8
+    mavenAdditionalArgs: ''
 # TODO W-13029381 uncomment when default changes to java 17
   #jdk11:
     #testJdkTool: OPEN-JDK11
