--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,18 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>org.mule.tests</groupId>
+                <artifactId>test-components</artifactId>
+                <classifier>mule-plugin</classifier>
+                <version>${muleTestComponentsVersion}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>xml-apis</groupId>
+                        <artifactId>xml-apis</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -98,12 +110,6 @@
         <groupId>org.mule.runtime</groupId>
         <artifactId>mule-dwb-api</artifactId> 
         <scope>provided</scope>         
-    </dependency>
-    <dependency>
-      <groupId>org.mule.tests</groupId>
-      <artifactId>test-components</artifactId>
-      <version>${muleTestComponentsVersion}</version>
-      <classifier>mule-plugin</classifier>
     </dependency>
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
