W-13591856: Split package on derby jars used in tests

--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -215,8 +215,9 @@
 
         <!-- DB Drivers -->
         <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>mule-derby-all</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
