--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -132,6 +132,10 @@
         </dependency>
         <dependency>
             <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-cors-kernel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.modules</groupId>
             <artifactId>mule-scripting-module</artifactId>
             <classifier>mule-plugin</classifier>
         </dependency>
@@ -141,6 +145,10 @@
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-jms-connector</artifactId>
             <classifier>mule-plugin</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-jms-client</artifactId>
         </dependency>
         <!-- ActiveMQ Dependencies-->
         <dependency>
