--- a/extensions-xml-support/pom.xml
+++ b/extensions-xml-support/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>jetty-server</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.tests</groupId>
