--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -332,6 +332,11 @@
             <artifactId>commons-text</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.tests</groupId>
