--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -15,28 +15,14 @@
     <name>Mule Extensions DSL Integration Tests</name>
 
     <properties>
-        <javaModuleName>org.mule.test.integration.dsl</javaModuleName>
         <javaxJmsApiVersion>2.0.1</javaxJmsApiVersion>
         <jsonassert.version>1.5.2</jsonassert.version>
         <guice.version>5.0.1</guice.version>
+
+        <javaModuleName>org.mule.test.integration.dsl</javaModuleName>
+        <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <!-- Runtime dependencies -->
