--- a/security/pom.xml
+++ b/security/pom.xml
@@ -15,26 +15,12 @@
     <name>Mule Extensions Security Integration Tests</name>
 
     <properties>
-        <javaModuleName>org.mule.test.integration.security</javaModuleName>
-        <formatterConfigPath>../formatter.xml</formatterConfigPath>
         <springSecurityVersion>5.1.0.RELEASE</springSecurityVersion>
-    </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+        <javaModuleName>org.mule.test.integration.security</javaModuleName>
+        <skipExportTests>false</skipExportTests>
+        <formatterConfigPath>../formatter.xml</formatterConfigPath>
+    </properties>
 
     <dependencies>
         <dependency>
