--- a/tracing/src/test/resources/exporter.conf
+++ b/tracing/src/test/resources/exporter.conf
@@ -2,17 +2,17 @@
 # OPEN TELEMETRY TRACING EXPORTER SETTINGS #
 ############################################
 
-# True to enable the Open Telemetry distributed tracing feature.
-# Default value: false.
-mule.open.telemetry.exporter.enabled=${mule.open.telemetry.exporter.enabled}
-
-#### EXPORT ENDPOINT SETTINGS:
-
-# Whether to export using the GRPC or the HTTP transport.
-# Available values: GRPC, HTTP.
-# Default value: GRPC.
-mule.open.telemetry.exporter.type=HTTP
-
-# Endpoint where the traces will be exported to.
-# Default value: http://localhost:4317 for GRPC, http://localhost:4318/v1/traces for HTTP.
-mule.open.telemetry.exporter.endpoint=${mule.open.telemetry.exporter.endpoint}
+mule:
+    openTelemetry:
+        tracer:
+            exporter:
+                # True to enable the Open Telemetry distributed tracing feature.
+                # Default value: false.
+                enabled: ${mule.openTelemetry.tracer.exporter.enabled}
+                # Whether to export using the GRPC or the HTTP transport.
+                # Available values: GRPC, HTTP.
+                # Default value: GRPC.
+                type: HTTP
+                # Endpoint where the traces will be exported to.
+                # Default value: http://localhost:4317 for GRPC, http://localhost:4318/v1/traces for HTTP.
+                endpoint: ${mule.openTelemetry.tracer.exporter.endpoint}
