Test fixes (migrating all the testing configs to YAML)

--- a/tracing/src/test/resources/override/async/monitoring-async-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/async/monitoring-async-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-async-flow/processors/1=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "async-flow/processors/1=OVERVIEW"
