--- a/tracing/src/test/resources/override/choice-route/debug-choice-route-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/choice-route/debug-choice-route-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-choice-flow/processors/0=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "choice-flow/processors/0=OVERVIEW"
