--- a/tracing/src/test/resources/override/choice-route/monitoring-choice-route-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/choice-route/monitoring-choice-route-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-choice-flow/processors/0=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "choice-flow/processors/0=OVERVIEW"
