--- a/tracing/src/test/resources/override/custom-scope/debug-custom-scope-monitoring/tracing-level.conf
+++ b/tracing/src/test/resources/override/custom-scope/debug-custom-scope-monitoring/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-custom-scope-flow/processors/0=MONITORING
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "custom-scope-flow/processors/0=MONITORING"
