--- a/tracing/src/test/resources/override/custom-scope/overview-custom-scope-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/custom-scope/overview-custom-scope-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-custom-scope-flow/processors/0=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "custom-scope-flow/processors/0=DEBUG"
