--- a/tracing/src/test/resources/override/first-successful/monitoring-first-successful-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/first-successful/monitoring-first-successful-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-first-successful-telemetryFlow/processors/1=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "first-successful-telemetryFlow/processors/1=OVERVIEW"
