--- a/tracing/src/test/resources/override/first-successful/overview-first-successful-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/first-successful/overview-first-successful-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-first-successful-telemetryFlow/processors/1=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "first-successful-telemetryFlow/processors/1=DEBUG"
