--- a/tracing/src/test/resources/override/foreach/overview-foreach-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/foreach/overview-foreach-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-for-each-telemetryFlow/processors/1=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "for-each-telemetryFlow/processors/1=DEBUG"
