--- a/tracing/src/test/resources/override/parallel-foreach/monitoring-parallel-foreach-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/parallel-foreach/monitoring-parallel-foreach-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-parallel-for-eachFlow/processors/1=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "parallel-for-eachFlow/processors/1=OVERVIEW"
