--- a/tracing/src/test/resources/override/parallel-foreach/overview-parallel-foreach-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/parallel-foreach/overview-parallel-foreach-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-parallel-for-eachFlow/processors/1=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "parallel-for-eachFlow/processors/1=DEBUG"
