--- a/tracing/src/test/resources/override/round-robin/overview-round-robin-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/round-robin/overview-round-robin-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-round-robin-flow/processors/0=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "round-robin-flow/processors/0=DEBUG"
