--- a/tracing/src/test/resources/override/scatter-gather/overview-scatter-gather-monitoring/tracing-level.conf
+++ b/tracing/src/test/resources/override/scatter-gather/overview-scatter-gather-monitoring/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-scatter-gather-flow/processors/0=MONITORING
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "scatter-gather-flow/processors/0=MONITORING"
