--- a/tracing/src/test/resources/override/try-scope/overview-try-scope-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/try-scope/overview-try-scope-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=OVERVIEW
-try-scope-flow/processors/0=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: OVERVIEW
+            levelOverrides:
+                - "try-scope-flow/processors/0=DEBUG"
