--- a/tracing/src/test/resources/override/until-successful/debug-until-successful-monitoring/tracing-level.conf
+++ b/tracing/src/test/resources/override/until-successful/debug-until-successful-monitoring/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-until-successful-flow/processors/0=MONITORING
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "until-successful-flow/processors/0=MONITORING"
