--- a/tracing/src/test/resources/override/until-successful/monitoring-until-successful-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/until-successful/monitoring-until-successful-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-until-successful-flow/processors/0=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "until-successful-flow/processors/0=DEBUG"
