--- a/tracing/src/test/resources/override/async/debug-async-monitoring/tracing-level.conf
+++ b/tracing/src/test/resources/override/async/debug-async-monitoring/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-async-flow/processors/1=MONITORING
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "async-flow/processors/1=MONITORING"
