--- a/tracing/src/test/resources/override/async/monitoring-async-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/async/monitoring-async-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-async-flow/processors/1=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "async-flow/processors/1=DEBUG"
