--- a/tracing/src/test/resources/override/choice-route/monitoring-choice-route-debug/tracing-level.conf
+++ b/tracing/src/test/resources/override/choice-route/monitoring-choice-route-debug/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-choice-flow/processors/0=DEBUG
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "choice-flow/processors/0=DEBUG"
