--- a/tracing/src/test/resources/override/first-successful/debug-first-successful-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/first-successful/debug-first-successful-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-first-successful-telemetryFlow/processors/1=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "first-successful-telemetryFlow/processors/1=OVERVIEW"
