--- a/tracing/src/test/resources/override/foreach/debug-foreach-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/foreach/debug-foreach-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-for-each-telemetryFlow/processors/1=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "for-each-telemetryFlow/processors/1=OVERVIEW"
