--- a/tracing/src/test/resources/override/round-robin/monitoring-round-robin-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/round-robin/monitoring-round-robin-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-round-robin-flow/processors/0=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "round-robin-flow/processors/0=OVERVIEW"
