--- a/tracing/src/test/resources/override/scatter-gather/debug-scatter-gather-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/scatter-gather/debug-scatter-gather-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=DEBUG
-scatter-gather-flow/processors/0=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: DEBUG
+            levelOverrides:
+                - "scatter-gather-flow/processors/0=OVERVIEW"
