--- a/tracing/src/test/resources/override/scatter-gather/monitoring-scatter-gather-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/scatter-gather/monitoring-scatter-gather-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-scatter-gather-flow/processors/0=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "scatter-gather-flow/processors/0=OVERVIEW"
