--- a/tracing/src/test/resources/override/try-scope/monitoring-try-scope-overview/tracing-level.conf
+++ b/tracing/src/test/resources/override/try-scope/monitoring-try-scope-overview/tracing-level.conf
@@ -1,2 +1,6 @@
-level=MONITORING
-try-scope-flow/processors/0=OVERVIEW
+mule:
+    openTelemetry:
+        tracer:
+            level: MONITORING
+            levelOverrides:
+                - "try-scope-flow/processors/0=OVERVIEW"
