W-13706677: Add tracing level and overrides to polling

--- a/tracing/src/test/resources/exporter_with_overrides.conf
+++ b/tracing/src/test/resources/exporter_with_overrides.conf
@@ -6,6 +6,8 @@ mule:
     openTelemetry:
         tracer:
             level: ${test.level}
+            levelOverrides:
+                 - "flow=MONITORING"
             exporter:
                 # True to enable the Open Telemetry distributed tracing feature.
                 # Default value: false.
