W-13709325: Separate containerClassLoader mule and 3rd parties
* Move AbstractConfigurationFailuresTestCase in `integration` to their
own module

these tests run along functional test cases for which the container
classloader has been split. The problem is that Spring caches types
across different test runs. If an
`AbstractConfigurationFailuresTestCase` runs first, spring caches are
populated with container classes from the root classlaoder (java's
AppLauncher), and then functional test cases that have instances of
classes form the separated container classloader do not match the cached
class, resultin in test failures.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
   <modules>
     <module>integration</module>
+    <module>integration-config-failures</module>
     <module>performance</module>
     <module>dsl</module>
     <module>soap-connect</module>
