Fixed property name

--- a/metrics/src/test/resources/conf/meter-exporter.conf
+++ b/metrics/src/test/resources/conf/meter-exporter.conf
@@ -5,4 +5,4 @@ mule:
                 enabled: true
                 type: GRPC
                 interval: 1
-                endpoint: ${mule.open.telemetry.meter.exporter.endpoint}
+                endpoint: ${mule.openTelemetry.meter.exporter.endpoint}
