--- a/schedulers-tests/pom.xml
+++ b/schedulers-tests/pom.xml
@@ -20,6 +20,12 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mule.runtime</groupId>
+            <artifactId>mule-module-service-artifact-impl</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.services</groupId>
