--- a/http/pom.xml
+++ b/http/pom.xml
@@ -59,6 +59,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mule.glassfish.grizzly</groupId>
             <artifactId>tls-sni</artifactId>
             <version>${grizzly.version}</version>
